--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Version next
 
 - Split the code into more than one file
+- Add the software to Windows list of programms
+- Runs on 32 and 64 bits (install 32 or 64bits node.exe)
+- Detect new drives or new interfaces (CollectdCompat plugin)
+- new switchs for command-line install (run with /? and without /S to get the help)
 
 Version 1.2.1
 
