--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Version next
 - Detect new drives or new interfaces (CollectdCompat plugin)
 - new switchs for command-line install (run with /? and without /S to get the help)
 - no more run 26 (a to z) drivespace commands to check all drives
+- Renamed project CollectM
 
 Version 1.2.1
 
