--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-Version next
+Version 1.3.1
 
 - New plugin sysconfig (to keep track of version info)
+- Always install default config file as default.json-dist
 
 Version 1.3.0
 
