--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 1.3.3
+
+- Set the default interval as 60
+
 Version 1.3.2
 
 - Move from windows-cpu to perfmon due to crashs with windows-cpu (wmic cpu get loadpercentage)
