--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Version 1.3.4
+
+- Fixed a bug (memory leak)
+- Updates on the installer in order to backup config and log files when upgrading
+
 Version 1.3.3
 
 - Set the default interval as 60
