Remove old logs after X days

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Version 1.5.0
 
 - New plugin "process"
 - API change : Plugin callbacks should return 0 if working.
+- Remove old logs after X days
+- Stop after a user-defined TTL (and Windows Service will restart it) to prevent memory leaks side effects
 
 Version 1.4.0
 
