--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 1.5.1
+
+- PR #8 : fix syntax/parsing errors in default.json. Thanks to Dimitris Rozakis.
+- Fixed issue#7 : Receiving interface rx values as both rx and tx. Thanks to Dimitris Rozakis.
+- Code cosmetics on plugin CollectdCompat.
+
 Version 1.5.0
 
 - New plugin "process"
