--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+- PR #10 : added Load plugin (Thanks to Paul Tzianos)
+- PR #11 : added Ping plugin (Thanks to Paul Tzianos)
+- PR #12 : added Disk plugin (Thanks to Paul Tzianos)
+- PR #15 : added Df plugin (Thanks to Paul Tzianos)
+- PR #13 (1) : removed duplicate modules from collectdCompat plugin (Thanks to Paul Tzianos)
+- PR #13 (2) : some modules of CollectdCompat plugin are now optional (Thanks to Paul Tzianos)
+
 Version 1.5.1
 
 - PR #8 : fix syntax/parsing errors in default.json. Thanks to Dimitris Rozakis.
