--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- PR #14 : Added crypto support (Thanks to Dimitris Rozakis)
+
 Version 1.5.1
 
 - PR #8 : fix syntax/parsing errors in default.json. Thanks to Dimitris Rozakis.
